[package]
name = "cronx"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/12yanogden/cronx"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
cron = "0.16.0"
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dist]
inherits = "release"
lto = "thin"
